services/deployment-svc-example.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-svc-example
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: my-server
  template:
    metadata:
      labels:
        app: my-server
    spec:
      containers:
      - name: server
        image: yoavklein3/server:1.0
        ports:
        - containerPort: 3000
