services/svc-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: svc-test-pod
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 60; done']
