services/svc-clusterip.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-clusterip
spec:
  type: ClusterIP
  selector: 
    app: svc-example
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
