services/svc-externalips.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-externalip
spec:
  selector:
    app: my-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  externalIPs:
    - 172.31.25.212
