services/svc-externalname.yaml
apiVersion: v1
kind: Service
metadata:
    name: svc-externalname
spec:
    type: ExternalName
    externalName: www.google.com
