services/svc-headless.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector: 
    app: my-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
