services/svc-loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-loadbalancer
spec:
  type: LoadBalancer
  selector: 
    app: svc-example
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30080
